fix: add word-wrap for long text

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,6 @@
 .app-container {
   min-width: 100px;
-  max-width: 500px;
+  max-width: 800px;
   width: 90%;
   margin: auto;
   padding: 20px;
@@ -23,4 +23,8 @@
 
 .user-form-full-width {
   width: 100%;
+}
+
+p {
+  word-wrap: break-word;
 }
